@@ -393,10 +393,12 @@ void align(char **strp)
 }
 
 /* Null a string at a certain index and align it */
-void null_at(char *data, int index)
+void null_at(char **data, int index)
 {
-    data[index] = 0;
-    align(&data);
+
+    /* Ahh!  Damn dereferencing */
+    (*data)[index] = 0;
+    align(data);
 }
 
 void usage(void)
@@ -1024,7 +1026,7 @@ void do_wrap(filestruct * inptr, char input_char)
 	    down = 1;
 	}
 
-	null_at(inptr->data, current_x);
+	null_at(&inptr->data, current_x);
 
 	if (ISSET(MARK_ISSET) && (mark_beginbuf == inptr)) {
 	    mark_beginbuf = temp;
@@ -1085,7 +1087,7 @@ void do_wrap(filestruct * inptr, char input_char)
 	    i = current_word_start - 1;
 	    current_x = current_word_start;
 
-	    null_at(inptr->data, current_word_start);
+	    null_at(&inptr->data, current_word_start);
 
 	    /* Increment totsize to account for the new line that
 	       will be added below, so that it won't end up being
